--- a/dc_main.yml
+++ b/dc_main.yml
@@ -19,6 +19,17 @@ services:
     volumes:
       - dist-volume:/var/www/frontend/
 
+  api-database:
+    container_name: api-database
+    image: postgres:13-alpine
+    restart: always
+    environment:
+      - POSTGRES_USER=api
+      - POSTGRES_PASSWORD=api
+      - POSTGRES_DB=api
+    volumes:
+      - api-database-data:/var/lib/postgresql/data/
+
   backend-1:
     container_name: backend-1
     build:
@@ -27,6 +38,8 @@ services:
     restart: always
     environment:
       - ENV=production
+    depends_on:
+      - api-database
 
   frontend:
     container_name: frontend
@@ -42,36 +55,7 @@ services:
     volumes:
       - dist-volume:/frontend/dist
 
-  keycloak-database:
-    container_name: keycloak-database
-    image: postgres:13-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=keycloak
-      - POSTGRES_PASSWORD=keycloak
-      - POSTGRES_DB=keycloak
-    volumes:
-      - keycloak-database-data:/var/lib/posgresql/data/
-
-  keycloak:
-    container_name: keycloak
-    image: jboss/keycloak:12.0.4
-    restart: always
-    environment:
-      - DB_VENDOR=POSTGRES
-      - DB_ADDR=keycloak-database
-      - DB_PORT=5432
-      - DB_DATABASE=keycloak
-      - DB_USER=keycloak
-      - DB_SCHEMA=public
-      - DB_PASSWORD=keycloak
-      - KEYCLOAK_USER=${PD_KEYCLOAK_USER}
-      - KEYCLOAK_PASSWORD=${PD_KEYCLOAK_PASSWORD}
-      - PROXY_ADDRESS_FORWARDING=true
-    depends_on:
-      - keycloak-database
-
 volumes:
   dist-volume:
-  keycloak-database-data:
+  api-database-data:
 
