fix: typo: wrong link for keycloak database volume

--- a/dc_keycloak_dev.yml
+++ b/dc_keycloak_dev.yml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_PASSWORD=keycloak
       - POSTGRES_DB=keycloak
     volumes:
-      - keycloak-database-data:/var/lib/posgresql/data/
+      - keycloak-database-data-dev:/var/lib/postgresql/data/
 
   keycloak:
     container_name: keycloak
@@ -32,5 +32,5 @@ services:
       - keycloak-database
 
 volumes:
-  keycloak-database-data:
+  keycloak-database-data-dev:
 
