--- a/.gitignore
+++ b/.gitignore
@@ -458,3 +458,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,macos,windows,linux,jetbrains+all,node,python,vuejs
+
+env_vars.sh
