feat: workers: add redis database

--- a/dc_main.yml
+++ b/dc_main.yml
@@ -27,23 +27,31 @@ services:
     entrypoint: uvicorn app.main:app --host 0.0.0.0 --port 80
     restart: always
     environment:
-      - KEYCLOAK_ADDRESS=${PD_KEYCLOAK_ADDRESS}
-      - KEYCLOAK_REALM=${PD_KEYCLOAK_REALM}
-      - KEYCLOAK_CLIENT_ID=${PD_KEYCLOAK_BACKEND_CLIENT_ID}
+      - PD_KEYCLOAK_ADDRESS=${PD_KEYCLOAK_ADDRESS}
+      - PD_KEYCLOAK_REALM=${PD_KEYCLOAK_REALM}
+      - PD_KEYCLOAK_CLIENT_ID=${PD_KEYCLOAK_BACKEND_CLIENT_ID}
+      - PD_CELERY_BROKER_ADDRESS=amqp://workers-broker
+      - PD_CELERY_BACKEND_ADDRESS=redis://workers-backend/0
     depends_on:
       - api-database
-      - rabbitmq
-      - worker
+      - workers
 
-  worker:
-    container_name: worker
+  workers:
+    container_name: workers
     build:
       context: ./backend
       dockerfile: Dockerfile
-    entrypoint: celery --app app.worker.main:app --broker amqp://rabbitmq worker --loglevel INFO
+    entrypoint: celery --app app.worker.main:app worker --loglevel INFO
     restart: always
+    environment:
+      - PD_KEYCLOAK_ADDRESS=${PD_KEYCLOAK_ADDRESS}
+      - PD_KEYCLOAK_REALM=${PD_KEYCLOAK_REALM}
+      - PD_KEYCLOAK_CLIENT_ID=${PD_KEYCLOAK_BACKEND_CLIENT_ID}
+      - PD_CELERY_BROKER_ADDRESS=amqp://workers-broker
+      - PD_CELERY_BACKEND_ADDRESS=redis://workers-backend/0
     depends_on:
-      - rabbitmq
+      - workers-broker
+      - workers-backend
 
   frontend:
     container_name: frontend
