--- a/dc_api-database_dev.yml
+++ b/dc_api-database_dev.yml
@@ -8,6 +8,8 @@ services:
       - POSTGRES_USER=${PD_API_POSTGRES_USER}
       - POSTGRES_PASSWORD=${PD_API_POSTGRES_PASSWORD}
       - POSTGRES_DB=api
+    ports:
+      - "5432:5432"
     volumes:
       - api-database-data-dev:/var/lib/postgresql/data/
 
